integration-tests/tests/errors/views/js-syntax-error.ejs
<!DOCTYPE html>
<html lang="en">
<head>
	<meta charset="UTF-8">
	<title>Errors test</title>
  <%- renderAgent({}) %>
  <script>
    var abc=;
  </script>
</head>
<body>
</body>
</html>
